fix board cell alignment

--- a/less/studio-big-board.less
+++ b/less/studio-big-board.less
@@ -9,7 +9,7 @@ body {
 .senate{
 	padding: 0.5rem 1rem 1rem;
 	table{
-		font-size: 1.5rem;
+		font-size: 1.4rem;
 	}
 	.results-header-group h2,
 	.results-header-group p,
@@ -23,11 +23,18 @@ body {
 		font-size:1.1rem;
 	}
 	.results .races{
+		.pickup {
+			width: 3%;
+			padding: 0;
+		}
+		.results-status {
+			width: 13%;
+		}
 		.candidate-total{
-			width:8%;
+			width:7%;
 		}
 		.candidate{
-			width:31%;
+			width:30%;
 
 			&.incumbent img {
 				height: 1.6rem;
